@@ -1075,6 +1075,39 @@ register int x, y;
 	return(otmp);
 }
 
+
+/* Names from NAO (400 incidents) and http://un.nethack.nu/cause/petrified+by+Medusa (2) */
+/* Names may repeat, some players (DeathRobin and xaiph) managed to get killed 4 times in this way */
+/* Last update date: 27 I 2013 */
+static const char * const petrified_by_medusa [] = { "DeathRobin", "xaiph", "DeathRobin", "xaiph", "DeathRobin", "xaiph", "DeathRobin", "xaiph", "aardvarkj", "Tifa", "Triamis", "zem", "aardvarkj", "Tifa", "Triamis", "zem", "aardvarkj", "Tifa", "Triamis", "zem", "bebing", "bweir", "Cheeta", "clburke", "DoomTurtle", "DrPotato", "Eidolos", "fooquux", "Galdor", "heliogabal", "init", "Inkhoof", "jmaygarden", "jollysoldi", "korso", "KrO2", "liberty", "Lukano", "MehPlusRawr", "mercury5", "musicdemon", "Shreder0", "sparrow4", "Spazm", "subbawt", "VicViper", "zid", "bebing", "bweir", "Cheeta", "clburke", "DoomTurtle", "DrPotato", "Eidolos", "fooquux", "Galdor", "heliogabal", "init", "Inkhoof", "jmaygarden", "jollysoldi", "korso", "KrO2", "liberty", "Lukano", "MehPlusRawr", "mercury5", "musicdemon", "Shreder0", "sparrow4", "Spazm", "subbawt", "VicViper", "zid", "Aerobe", "AgentSei", "Aleron", "AlexD", "ALMSIVI", "Aloha", "Altwa", "androo", "antiparago", "anuite", "aRandomHero", "ArgonSloth", "arxanas", "ascend", "atsi", "axial", "Battlehave", "Bearhobag", "beh", "BEHiker57W", "Belacqui", "Betamax", "Bethrezen", "biodiesel", "Bishness", "blarrrg", "Blooddeath", "Blowfun", "bobbens", "bps", "brian0", "brn", "brooder", "broppy", "cdi", "Cephas", "Ch0Hag", "Che", "Chilliwack", "chomzee", "chrisn42", "Clanger", "clemux", "cognificen", "coolestbond", "cthulu", "D34dlyD34dly", "DainDwarf", "deathdruid", "DeathOnASt", "demirobin", "Dentarthurdent", "Diggy", "djanatyn", "djm", "dkritz", "Dogmaw", "Doh", "Dolphy", "Donna", "DoomChicken", "doytaeb", "dragonizer", "dredd", "drJebus", "DrMuscles", "dtype", "DukGalNamu", "dumdumcoo", "Eaven", "Eben", "efot", "elint", "Elliott", "entreri", "entro", "eragg0", "Erizzle", "Erokh", "escalated", "f00bar", "Fabian", "falzer", "feitd", "Fenix", "Feory", "Flyte", "fontpolice", "foobar", "foolishwtf", "fragmites", "Fredil", "fredward", "fry", "Futilius", "Garnam", "ghfdrvtsyup", "ghtadm", "gillbates", "Gilthir", "GL", "glisignoli", "gmenzel", "GmonSquare", "gneek", "Gorfiend", "goros", "Greybeard", "greycat", "Grimbaldou", "Grund", "Gueust", "Haggard", "hail", "haole", "Harudoku", "healthy", "hellstrom", "Helsbecter", "Hmgn", "hprx", "Impglein", "InstantLoser", "iopdude", "isquidy", "iwantmorepies", "ix", "j3", "Janyson", "Jaskaa", "jasonshalo", "jax82282", "jbmigel", "jejenum", "jessek", "jetblack", "jew2", "jmackellar", "JoeBob", "Jonadab", "jpeirce", "jspeed", "kante", "Kayos", "kcw12", "Kenneth", "kiroh", "knnn", "koitsu", "Krantnejie", "Kurshu", "Led", "LittleWhit", "Loch", "Lurchtoke", "mab", "madcowjim", "marlyn", "Masque", "Maud", "mcmanus", "medibot", "mee", "mfactor", "MikeyP", "Misha", "mistheist", "mithas", "monastic", "morakk", "Moriarty", "Mortuis", "Mossbot", "mr0t", "mrbill82", "Mushroomi", "nardo", "NardoLoopa", "Nebix", "neko", "nethack101", "neutron", "niabverte", "Nightgaunt", "Nightrippe", "nimsumzero", "NobbyNobbs", "Nockpoint", "nodog", "nooodl", "norton", "nremorse", "nunu", "Nybes", "Nyctoparros", "nykevin17", "oj7", "okyada", "omegaham", "orenbum", "Ortlinde", "OsirisBRD", "palla", "PaRaD0xx", "parre", "peters509", "petitchou", "phetus", "pilkington", "PingtheMer", "pizzle", "Planker", "pmcalpin", "potpie", "predakanga", "Presswt", "Price", "quinnr", "Quixel", "Qutri", "Razanul", "rcs", "realcool", "RedBandit", "rednuf", "reid", "Rhubarb", "richard", "ripjack", "rizi", "robq", "Rocknar", "Rocknlol", "rom", "rombus", "roskilde", "Roxus", "RS14", "rudi", "RuLavan", "SabreJon", "Sally", "samech", "sandis", "savagelich", "scm", "scottk", "seadog", "Seymor", "shimato", "shock", "shonuff", "Simokon", "sk9851", "skorm", "Skuzal", "snarius", "sneaker", "SoldierAntEater", "Somecallmetim", "SoulDragon", "soundnfury", "soze", "spaakko", "Spaceduck", "Splatypus", "spontiff", "Squishy", "srf", "Stathol", "stenno", "steveh", "stinkster2", "Stossel", "stumblySF", "SubG", "suzu", "swartzcr", "Tactii", "tapin", "Teabing", "Tenebrys", "Thaddeus", "Theta", "thn", "Thomag", "tmrykr", "topstone01", "Torsktrynet", "TotalNoob", "Trent", "tvm", "tweekeroo", "twitch", "TwiX", "Unctuous", "up", "valkerie", "VoiceOfRea", "warrenlynch", "wastrel", "weziman", "WILDMAN", "wirelesshero", "Wisski", "wisteria", "wizzomafiz", "Wonderin", "WoobleValk", "Xaphania", "Xavior", "xcpp", "Xizlqk", "Xlax", "XxPagxX", "Ybenk", "ylaruum", "Youyou", "yoz", "Yxskaft", "Zadir", "Zanthra", "zaq", "Zaus", "Zeshiro", "zste", "danguy", "Souljazz", };
+
+char *
+get_player_name_petrified_by_Medusa_on_public_server()
+{
+	return petrified_by_medusa[rn2(SIZE(petrified_by_medusa))];
+}
+
+struct obj *
+mk_player_statue_on_Medusa_island(int x, int y)
+{
+
+	return mk_named_object(STATUE, &mons[get_random_role()], x, y, get_player_name_petrified_by_Medusa_on_public_server());
+}
+
+struct obj *
+mk_moster_statue_on_Medusa_island(int x, int y)
+{
+	/* Medusa statues don't contain books */
+	struct obj *otmp = mkcorpstat(STATUE, (struct monst *)0, (struct permonst *)0, x, y, FALSE);
+	if (otmp) {
+		while (pm_resistance(&mons[otmp->corpsenm],MR_STONE) || poly_when_stoned(&mons[otmp->corpsenm])) {
+			otmp->corpsenm = rndmonnum();
+			otmp->owt = weight(otmp);
+		}
+	}
+	return otmp;
+}
+
 /* make a new corpse or statue, uninitialized if a statue (i.e. no books) */
 struct obj *
 mk_named_object(objtype, ptr, x, y, nm)
